2010-09-06  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: fix chromium devtools tests
        https://bugs.webkit.org/show_bug.cgi?id=45258

        * src/js/Tests.js:
        (.TestSuite.prototype._waitForScriptPause):

2010-08-26  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Steve Block.

        Add index insertion support to IndexedDB.
        https://bugs.webkit.org/show_bug.cgi?id=44695

        Add asserts on the [] operator.

        * public/WebVector.h:
        (WebKit::WebVector::operator[]):

2010-09-06  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        [v8] bypass caches when query memory usage from post GC and in crash handler.
        https://bugs.webkit.org/show_bug.cgi?id=45036

        Add Chromium-specific API to query actual memory usage which bypasses any caches.

        * public/WebKitClient.h:
        (WebKit::WebKitClient::actualMemoryUsageMB):
        * src/ChromiumBridge.cpp:
        (WebCore::ChromiumBridge::actualMemoryUsageMB):

2010-09-05  Peter Kasting  <pkasting@google.com>

        Reviewed by Adam Barth.

        Make Chromium/Mac generate continuous mousewheel events with the same wheelDelta values as Safari/Mac.
        https://bugs.webkit.org/show_bug.cgi?id=45155

        * src/mac/WebInputEventFactory.mm:
        (WebKit::WebInputEventFactory::mouseWheelEvent):

2010-09-05  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: remove WebDevToolsAgentClient::forceRepaint which is not used
        https://bugs.webkit.org/show_bug.cgi?id=45179

        * public/WebDevToolsAgentClient.h:
        * src/DebuggerAgentImpl.cpp:
        (WebKit::DebuggerAgentImpl::debuggerOutput):
        * src/WebDevToolsAgentImpl.cpp:
        * src/WebDevToolsAgentImpl.h:

2010-09-05  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Add unit tests for interval tree